# kernel_prototype

./: .gitignore  CMakeLists.txt  Kernel_Prototype.cbp  Kernel_Prototype.depend  Kernel_Prototype.layout
src/: CMakeLists.txt  data_carrier.hpp  data_controller.cpp  data_controller.hpp  main.cpp  scheduler.cpp  scheduler.hpp  slack_task.hpp
src/modules/: i_data_carrier.hpp  i_module.cpp  i_module.hpp  i_rttask.hpp
src/modules/demo_module/: demo_data_carrier.cpp  demo_data_carrier.hpp  demo_module.cpp  demo_module.hpp  demo_task.cpp  demo_task.hpp
src/modules/gps/: gps_data.hpp  gps_module.cpp  gps_module.hpp  gps_task.cpp  gps_task.hpp  i_gps_data.hpp
